Added component 'Social' on component 'Header' and component 'Button'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,6 @@
 		"noEmit": true,
 		"jsx": "react-jsx",
 		"paths": {
-			"@/*": ["./*"],
 			"@assets/*": ["./assets/*"],
 			"@fonts/*": ["./assets/fonts/*"],
 			"@img/*": ["./assets/img/*"],
@@ -25,7 +24,8 @@
 			"@components/*": ["./components/*"],
 			"@ui/*": ["./components/ui/*"],
 			"@utils/*": ["./utils/*"],
-			"@helper/*": ["./helper/*"]
+			"@helper/*": ["./helper/*"],
+			"@/*": ["./*"]
 		}
 	},
 	"include": ["src"]
