--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
 			"@components/*": ["./components/*"],
 			"@utils/*": ["./utils/*"],
 			"@helper/*": ["./helper/*"],
+			"@modules/*": ["./modules/*"],
 			"@/*": ["./*"]
 		}
 	},
