The 'useClass' hook has been added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
 			"@utils/*": ["./utils/*"],
 			"@helper/*": ["./helper/*"],
 			"@modules/*": ["./modules/*"],
+			"@hooks/*": ["./hooks/*"],
 			"@/*": ["./*"]
 		}
 	},
