--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
 	"name": "my-site-portfolio",
-	"version": "0.4.2",
+	"version": "0.4.3",
 	"private": true,
+	"readme": "README.md",
+	"author": {
+		"name": "justmax2001"
+	},
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
