--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "my-site-portfolio",
-	"version": "0.4.8",
+	"version": "0.4.9",
 	"private": true,
 	"readme": "README.md",
 	"type": "module",
@@ -52,6 +52,14 @@
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.1.0",
 		"prettier": "^3.5.3",
+		"stylelint": "^16.19.1",
+		"stylelint-config-prettier": "^9.0.5",
+		"stylelint-config-prettier-scss": "^1.0.0",
+		"stylelint-config-recommended-scss": "^15.0.0",
+		"stylelint-config-standard": "^38.0.0",
+		"stylelint-config-standard-scss": "^15.0.0",
+		"stylelint-prettier": "^5.0.3",
+		"stylelint-scss": "^6.12.0",
 		"typescript": "^5.4.5",
 		"typescript-eslint": "^8.32.0",
 		"vite": "^6.3.4"
