--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"name": "justmax2001"
 	},
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"preview": "vite preview",
 		"build": "vite build"
 	},
