--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
 		"stylelint-scss": "^6.12.0",
 		"typescript": "^5.4.5",
 		"typescript-eslint": "^8.32.0",
-		"vite": "^6.3.4"
+		"vite": "^6.3.4",
+		"vite-plugin-chunk-split": "^0.5.0"
 	},
 	"packageManager": "yarn@4.9.1"
 }
